src/components/Navbar/_nav.scss
.nav-bar,
.nav-logo,
.logo,
.nav-options {
    display: flex !important;
    flex-direction: row !important;
    align-items: center;
}

.desktop-nav {
    width: 100%;
    position: fixed;
    background-color: #212127;
    font-size: 0.63rem;
    z-index: 10;
    font-family: 'interreg' !important;
    font-weight: 900 !important;
    margin: 0;
    padding: 0;

    .nav-bar {
        align-items: center;
        justify-content: space-between;
        margin: 0 8rem;

        .nav-logo {
            padding: 0 1rem;
            margin: 0;

            .logo {
                justify-content: space-between;

                img {
                    margin-right: 0.5rem 0;
                }
            }
        }

        .nav-options {
            margin: 0;
            padding: 0;

            li {
                .nav-clickable {
                    overflow: hidden;
                    margin: 0 1rem;
                    position: relative;
                    transition: all 0.2s ease-in-out;
                    left: -17rem;

                    &::after {
                        content: '';
                        position: absolute;
                        height: 3px;
                        margin: 0;
                        left: 50%;
                        width: 0;
                        bottom: -0.5rem;
                        background-color: #325eff;
                    }

                    &:hover,
                    &:focus {
                        &::after {
                            opacity: 1;
                            width: 100%;
                            left: 0;
                        }
                    }
                }
            }
        }

        .login-btn {
            li {
                display: inline-block;
                text-decoration: none;
                margin-left: 2rem;

                a {
                    text-decoration: none;
                    color: white;

                    &:hover,
                    &:focus {
                        color: #909093;
                    }
                }

                &:last-child {
                    background-color: #325eff;
                    padding: 0.5rem 1.25rem;
                    border-radius: 2px;
                }
            }
        }
    }
}

